// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero component Should use use color black 1`] = `
<DocumentFragment>
  <section
    class="hero is-black"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color danger 1`] = `
<DocumentFragment>
  <section
    class="hero is-danger"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color dark 1`] = `
<DocumentFragment>
  <section
    class="hero is-dark"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color info 1`] = `
<DocumentFragment>
  <section
    class="hero is-info"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color light 1`] = `
<DocumentFragment>
  <section
    class="hero is-light"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color link 1`] = `
<DocumentFragment>
  <section
    class="hero is-link"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color null 1`] = `
<DocumentFragment>
  <section
    class="hero"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color primary 1`] = `
<DocumentFragment>
  <section
    class="hero is-primary"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color success 1`] = `
<DocumentFragment>
  <section
    class="hero is-success"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color warning 1`] = `
<DocumentFragment>
  <section
    class="hero is-warning"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component Should use use color white 1`] = `
<DocumentFragment>
  <section
    class="hero is-white"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component should concat classname in props with Bulma classname 1`] = `
<DocumentFragment>
  <section
    class="hero other-class this-is-a-test"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component should have hero classname 1`] = `
<DocumentFragment>
  <section
    class="hero"
  >
    Test 
    <a>
      Give me
    </a>
  </section>
</DocumentFragment>
`;

exports[`Hero component should render Hero with hero head, body and footer 1`] = `
<DocumentFragment>
  <section
    class="hero is-primary is-fullheight"
  >
    <header
      class="hero-head"
    >
      <div
        class="bd-notification is-info"
      >
        Header
      </div>
    </header>
    <div
      class="hero-body"
    >
      Body
    </div>
    <footer
      class="hero-foot"
    >
      <div
        class="bd-notification is-danger"
      >
        Footer
      </div>
    </footer>
  </section>
</DocumentFragment>
`;

exports[`Hero component should use gradient style 1`] = `
<DocumentFragment>
  <section
    class="hero is-primary is-bold"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Hero component should use inline styles 1`] = `
<DocumentFragment>
  <section
    class="hero"
    style="height: 250px;"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;
